<resources>
    <string name="app_name">Workout</string>
    <string name="enter_e_mail_adress">Enter E-mail Adress</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Don\'t have an account?<u> Sign Up</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_">SIGN UP</string>
    <string name="log_in">Already have an account? <u> Log in</u></string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="phone_number">Phone Number</string>
</resources>